syntax = "proto3";
package Enze;
message MessageHeader
{
    enum Mesg_Kind
    {
        MK_Version = 0;
        MK_Addr = 1;
        MK_Inv = 2;
        MK_GetData = 3;
        MK_GetBlocks = 4;
        MK_Tx = 5;
        MK_Review = 6;
        MK_Block = 7;
        MK_GetAddr = 8;
        MK_CheckOrder = 9;
        MK_SubmitOrder = 10;
        MK_Reply = 11;
    }
    string pchMessageStart = 1; 
    Mesg_Kind eMsgKind = 2;
    uint32 MessageSize = 3; 
}
